load("@bazel-erlang//:bazel_erlang_lib.bzl", "erlang_lib")

erlang_lib(
    app_name = "rabbitmq_ct_client_helpers",
    app_version = "master",
    deps = [
        "@rabbitmq-server//apps/amqp_client:bazel_erlang_lib",
        "@rabbitmq-server//apps/rabbit_common:bazel_erlang_lib",
        "@rabbitmq_ct_helpers//:bazel_erlang_lib",
    ],
)
